scrollbar fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,3 +10,12 @@ body {
   color: var(--text);
   font-family: var(--font-nunito-sans), Arial, Helvetica, sans-serif;
 }
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
